fix error scrollbar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1402,6 +1402,7 @@ html {
   left: 0;
   width: min(1240px, 100%);
   padding-top: 54px;
+  display: none;
 }
 .dropdown__inner {
   --inner-padding: 30px;
@@ -1475,10 +1476,10 @@ html {
 .menu-column__list {
   margin-top: 19px;
 }
-.menu-column__item:hover .sub-menu {
+.menu-column__item--active .sub-menu {
   display: grid;
 }
-.menu-column__item:hover > .menu-column__link {
+.menu-column__item:hover > .menu-column__link, .menu-column__item--active > .menu-column__link {
   font-weight: 500;
   color: #0071dc;
 }
